fix: overlapping image popup product

--- a/src/styles/swiper-custom.css
+++ b/src/styles/swiper-custom.css
@@ -46,3 +46,11 @@
   background-color: white;
   opacity: 1;
 }
+
+.swiper-slide {
+  z-index: -10;
+}
+
+.swiper-slide.swiper-slide-visible.swiper-slide-fully-visible.swiper-slide-active {
+  z-index: 100;
+}
